<resources>
    <string name="empty_image_warning">Fill in the image first</string>
    <string name="app_name">Catora</string>
    <string name="welcome_to">Welcome To</string>
    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="home">Home</string>
    <string name="upload">upload</string>
    <string name="profile">Profile</string>
    <string name="searchbar_hint">Search</string>
    <string name="welcome_to_our_app">Welcome to our app </string>
    <string name="edit_text_alert_username_format">Name cannot be empty</string>
    <string name="edit_text_alert_password_format">Password must not be less than 8 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="detail_request">Detail Order Commission</string>
    <string name="title">Title</string>
    <string name="request_description">Write your description here .......</string>
    <string name="price">Price</string>
    <string name="confirm">Confirm</string>
    <string name="send_order">Send Order</string>
    <string name="have_order">Have Order</string>
    <string name="artist_name">[Artist Name]</string>
    <string name="description">[DESCRIPTION lorem ipsum dolor sit amet]</string>
    <string name="postat">Posted at %1$s</string>
    <string name="logout">Logout</string>
    <string name="my_order">My Order</string>
    <string name="edit_profile">Edit Profile</string>
</resources>